Avoid data-name/value overlaps with long title/text

--- a/src/epiweb/media/pollster/wok/css/wok.pollster.css
+++ b/src/epiweb/media/pollster/wok/css/wok.pollster.css
@@ -11,10 +11,10 @@
 #pollster-properties h2 { background-image: -webkit-gradient(linear,center bottom,center top,from(#E4E4E4),to(#FEFEFE)); color: #191919; }
 #pollster-properties hr { margin: 5px 0; }
 #pollster-properties label { color: #888; margin: 0 0 0 9px; line-height: 22px;  }
-#pollster-properties input { font-size: 11px; background: #EEE; border: 1px solid #D2D2D2; float: right; width: 170px;  height: 20px;  padding: 0; }
+#pollster-properties input { font-size: 11px; background: #EEE; border: 1px solid #D2D2D2; float: right; width: 170px; height: 20px; padding: 0; }
 #pollster-properties input.short { width: 110px; margin-right: 10px; }
-#pollster-properties textarea { font-size: 11px; background: #EEE; border: 1px solid #D2D2D2; float: right; width: 170px;  height: 80px;  padding: 0;}
-#pollster-properties button { font-size: 11px; background: #EEE; border: 1px solid #D2D2D2; float: right; min-width: 50px;  height: 20px;  padding: 0 3px; cursor: pointer;  }
+#pollster-properties textarea { font-size: 11px; background: #EEE; border: 1px solid #D2D2D2; float: right; width: 170px; height: 80px; padding: 0;}
+#pollster-properties button { font-size: 11px; background: #EEE; border: 1px solid #D2D2D2; float: right; min-width: 50px; height: 20px; padding: 0 3px; margin: 0; cursor: pointer; }
 #pollster-properties h2 button { background: none; border: none; color: #666; text-decoration: underline; min-width: 0; }
 #pollster-properties select { font-size: 11px;  background: #EEE; border: 1px solid #D2D2D2; float: right; width: 170px; height: 20px; padding: 0; }
 #pollster-properties select.short { width: 110px; margin-right: 10px; }
@@ -35,7 +35,7 @@
 .question li { position: relative; }
 .question li:hover { background-color: #ffc; }
 .question li.selected { background-color: #cfc; }
-.question .info { display: block; position: absolute; top: 3px; right: 3px; font-size: 12px; font-weight: bold; opacity: 0.5; }
+.question .info { display: block; float: right; font-size: 12px; font-weight: bold; opacity: 0.5; }
 .question .derived-values { display: block; margin-left: 25px; list-style: circle; text-transform: uppercase; }
 
 .rules { display: block; float: left; width: 242px; margin-left: 10px; font-size: 10px; }
